<resources>
    <string name="app_name">Loan.ly</string>
    <string name="PhoneNo">Phone No. :</string>
    <string name="Name">Name :</string>
    <string name="Address">Address :</string>
    <string name="Adhar">Adhar :</string>
    <string name="textViewImage1">Select an Image</string>
    <string name="textViewImage2">Select an Image</string>
    <string name="textViewImage3">Select an Image</string>
    <string name="textViewImage4">Select an Image</string>
    <string name="submit">Submit</string>
    <string name="buttonimage1">Select Image 1</string>
    <string name="buttonimage2">Select Image 2</string>
    <string name="buttonimage3">Select Image 3</string>
    <string name="buttonimage4">Select Image 4</string>
    <string name="editTextPersonname">Enter Full Name</string>
    <string name="editTextAddress">Enter Address</string>
    <string name="editTextPhone">Enter Phone Number</string>
    <string name="editadhar">Enter Adhar</string>
</resources>
